BusOne/src/objects/Child_Event_Rule_Config_vod__c.object
<CustomObject>
    <description>Stores configurations for child event rules</description>
    <fields>
        <fullName>EM_Event_Rule_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event rule for a child event config</description>
        <label>Event Rule</label>
        <referenceTo>EM_Event_Rule_vod__c</referenceTo>
        <relationshipLabel>Event Rules</relationshipLabel>
        <relationshipName>Child_Event_Rule_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Event_Field_vod__c</fullName>
        <description>Stores the parent field for a child event rule config</description>
        <label>Parent Event Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Event_Related_List_vod__c</fullName>
        <description>Stores the related list for a child event rule config</description>
        <label>Parent Event Related List</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Child Event Rule Configuration</label>
    <nameField>
        <displayFormat>ER-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Event Rule Configurations</pluralLabel>
    <recordTypes>
        <fullName>Child_Event_Rule_Field_vod</fullName>
        <active>true</active>
        <description>Stores a parent event field that is associated to a child event rule</description>
        <label>Child Event Rule Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>Child_Event_Rule_Related_List_vod</fullName>
        <active>true</active>
        <description>Stores a parent event related list that is associated to a child event rule</description>
        <label>Child Event Rule Related List</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>